--- a/ChordViewDialog.ui
+++ b/ChordViewDialog.ui
@@ -7,40 +7,138 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>713</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Qt ChordView Widget Test</string>
   </property>
-  <widget class="ChordView" name="chordview" native="true">
+  <widget class="ChordView" name="chordview1" native="true">
    <property name="geometry">
     <rect>
      <x>30</x>
      <y>30</y>
-     <width>261</width>
-     <height>291</height>
+     <width>340</width>
+     <height>380</height>
     </rect>
    </property>
+   <property name="palette">
+    <palette>
+     <active>
+      <colorrole role="AlternateBase">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>220</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </active>
+     <inactive>
+      <colorrole role="AlternateBase">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>220</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </inactive>
+     <disabled>
+      <colorrole role="AlternateBase">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>220</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </disabled>
+    </palette>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>18</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
   </widget>
-  <widget class="ChordView" name="widget" native="true">
+  <widget class="ChordView" name="chordview2" native="true">
    <property name="geometry">
     <rect>
-     <x>330</x>
+     <x>400</x>
      <y>30</y>
      <width>191</width>
      <height>211</height>
     </rect>
    </property>
+   <property name="palette">
+    <palette>
+     <active>
+      <colorrole role="AlternateBase">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>220</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </active>
+     <inactive>
+      <colorrole role="AlternateBase">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>220</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </inactive>
+     <disabled>
+      <colorrole role="AlternateBase">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>255</red>
+         <green>255</green>
+         <blue>220</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </disabled>
+    </palette>
+   </property>
   </widget>
-  <widget class="ChordView" name="widget_2" native="true">
+  <widget class="ChordView" name="chordview3" native="true">
    <property name="geometry">
     <rect>
-     <x>560</x>
+     <x>630</x>
      <y>30</y>
      <width>140</width>
      <height>180</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="ChordView" name="chordview4" native="true">
+   <property name="geometry">
+    <rect>
+     <x>400</x>
+     <y>270</y>
+     <width>370</width>
+     <height>420</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>20</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
    </property>
   </widget>
  </widget>
